compiler/testData/cli/jvm/firErrorOnLastLineNoEol.out
warning: language version 2.0 is experimental, there are no backwards compatibility guarantees for new language and library features
compiler/testData/cli/jvm/firErrorOnLastLineNoEol.kt:1:9: error: 'this' is not defined in this context
konst x = this
        ^
compiler/testData/cli/jvm/firErrorOnLastLineNoEol.kt:2:9: error: 'this' is not defined in this context
konst y = this // *NO* EOL AFTER THIS LINE!
        ^
COMPILATION_ERROR
