compiler/testData/cli/jvm/firErrorOnLastLineNoEol.kt
konst x = this
konst y = this // *NO* EOL AFTER THIS LINE!